new bulk delete endpoint on decisiontable
