# doc/starchat-swagger.yaml
@@ -1166,6 +1166,7 @@ paths:
     delete:
       tags:
         - customer
+      deprecated: true
       summary: delete one or more entries from the DecisionTable
       operationId: delete_decisiontable_ids
       description: delete documents from the DecisionTable. The index must exists and the customer has write permissions on it.
@@ -1193,6 +1194,54 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/DeleteDocumentsResult'
+        '400':
+          description: 'invalid input, object invalid, bad request'
+        '401':
+          description: authorization denied or authentication failed
+  '/<index_name>/decisiontable/delete':
+    post:
+      tags:
+        - customer
+      operationId: post_decisiontable_bulk_delete
+      summary: delete one or more entries from the DecisionTable
+      description: delete documents from the DecisionTable. The index must exists and the customer has write permissions on it.
+      parameters:
+        - in: path
+          name: index_name
+          description: name of the index
+          required: true
+          schema:
+            type: string
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/DocsIds'
+            example: {'ids': ['id1', 'id2']}
+        description: Documents to delete
+      responses:
+        '200':
+          description: success
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/DeleteDocumentsResult'
+              example: {
+                "data": [
+                {
+                  "index": "index_getjenny_english_usecase0",
+                  "id": "id1",
+                  "version": 1,
+                  "found": true
+                },
+                {
+                  "index": "index_getjenny_english_usecase0",
+                  "id": "id2",
+                  "version": 1,
+                  "found": true
+                }
+                ]
+              }
         '400':
           description: 'invalid input, object invalid, bad request'
         '401':
